--- a/Fekrah/API/ClientApp/src/app/dashboard/dashboar-main/dashboard.component.scss
+++ b/Fekrah/API/ClientApp/src/app/dashboard/dashboar-main/dashboard.component.scss
@@ -39,7 +39,7 @@ $font-family-primary: "Cairo", Arial, sans-serif;
 
   // Header Styles
   .dashboard-header {
-    background: linear-gradient(135deg, #b8bd66 0%, #5e75e4 100%);
+    background: linear-gradient(135deg, #4f46e5, #7c3aed);
 
     padding: 2.8rem 0; // Increased padding for more prominence
     margin-bottom: 3rem; // Increased bottom margin
